--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ font-weight: 300;
     padding: 0.6rem 1.2rem;
     border: none;
     cursor: pointer;
-}
+    border-radius: 2px;
+   }
 
 .btn-white{
    color: #3040C4; 
@@ -117,7 +118,8 @@ font-weight: 300;
 }
 
 .possibilities{
-    height: 630px;
+    padding-top: 5.5rem;
+    padding-bottom: 5.5rem;
 }
 
 .possibilities .container{
@@ -126,19 +128,85 @@ font-weight: 300;
 }
 
 .possibilities__card{
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .possibilities__img{
     max-width: 150px;
-    max-height: 150px;
+    max-height: 160px;
+}
+
+.categories{
+    background-color: #00a2c61e;
+    padding-top: 3rem;
+    padding-bottom: 9.5rem;
+}
+
+.categories .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+
+.categories__list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+}
+
+.categories__subtitle{
+    font-size: 1.2rem;
+    margin-bottom: 1.3rem;
+    font-weight: bold;
+}
+
+.categories__title{
+    font-size: 3.1rem;
+    font-weight: bold;
+    margin-bottom: 1.6rem;
+}
+
+.categories__text{
+    font-size: 1.3rem;
+    margin-bottom: 7.2rem;
+}
+
+.categories__card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding:  1.1rem 3.3rem;
+    gap: 1.2rem;
+    width: 260px;
+    max-height: 300px;
+    border-radius: 8px;
+    background-color: #FFFFFF;
+}
+
+.categories__card:hover{
+    cursor: pointer;
+    background-color: #3141C5;
+    color: #FFFFFF;
+}
+
+.categories__name{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.about{
+    padding-top: 8.2rem;
+  padding-bottom: 10.5rem;
 }
 
 .about__contant{
-    /* display: flex;
+    display: flex;
     flex-direction: column;
-    gap: 2rem; */
+    gap: 1.5rem;
     width: 50%;
 }
 
@@ -151,6 +219,7 @@ flex-direction: column;
     color: #807F81;
     font-size: 1.2rem;
     font-weight: bold;
+    /* margin-bottom: 1.3rem; */
 }
 
 .about__title{
@@ -160,4 +229,45 @@ flex-direction: column;
 
 .about__text{
     font-size: 1.3rem;
+}
+
+.subscription{
+    background-color: rgba(43, 41, 45, 0.062);
+    padding-top: 5.8rem;
+    padding-bottom: 3.8rem;
+}
+
+.subscription .container{
+    display: flex;
+    gap: 10rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.subscription__title{
+    font-size: 2.2rem;
+    letter-spacing: -0.25px;
+    margin-bottom: 1.1rem;
+}
+
+.subscription__text{
+    font-size: 1.2rem;
+    margin-bottom: 1.38rem;
+}
+
+.subscription__form form {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.subscription__field{
+    width: 300px;
+    padding: 0px 15px;
+    border: 1px solid #2b292d3a;
+}
+
+
+.subscribe__field::placeholder {
+    font-family: "Work Sans", sans-serif;
+    font-size: 1rem;
 }
