--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 .logo {
   display: flex;
   align-items: center;
+  gap: 0.8rem;
 }
 
 .logo__name {
@@ -77,7 +78,11 @@ body {
 
 .nav__list {
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
+}
+
+.nav__item{
+width: 80px;
 }
 
 .nav__link {
@@ -91,13 +96,15 @@ body {
 
 .promo {
   background-color: #f9d9eb;
-  height: 700px;
+  padding-top: 11rem;
+  padding-bottom: 3.4rem;
 }
 
 .promo .container {
   display: flex;
   justify-content: center;
 }
+
 .promo__contant {
   width: 70%;
 }
@@ -105,10 +112,12 @@ body {
 .promo__title {
   font-size: 4.5rem;
   font-weight: bold;
+  margin-bottom: 1.8rem;
 }
 
 .promo__text {
   font-size: 1.3rem;
+  margin-bottom: 3.3rem;
 }
 
 .possibilities {
@@ -149,6 +158,13 @@ body {
   text-align: center;
 }
 
+.possibilities__link{
+  font-size: 1rem;
+  color: #3041C4;
+  font-weight: bold;
+
+}
+
 .categories {
   background-color: #00a2c61e;
   padding-top: 6rem;
@@ -178,11 +194,15 @@ body {
   font-size: 3.1rem;
   font-weight: bold;
   margin-bottom: 1.6rem;
+  width: 50%;
+  text-align: center;
 }
 
 .categories__text {
   font-size: 1.3rem;
   margin-bottom: 7.2rem;
+  width: 50%;
+  text-align: center;
 }
 
 .categories__card {
@@ -215,31 +235,30 @@ body {
 }
 
 .about__contant {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  width: 50%;
+  width: 40%;
 }
 
 .about .container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .about__subtitle {
   color: #807f81;
   font-size: 1.2rem;
   font-weight: bold;
-  /* margin-bottom: 1.3rem; */
+  margin-bottom: 1.3rem;
 }
 
 .about__title {
   font-size: 3.1rem;
   font-weight: bold;
+  margin-bottom: 2.7rem;
 }
 
 .about__text {
   font-size: 1.3rem;
+  margin-bottom: 2.7rem;
 }
 
 .subscription {
@@ -282,17 +301,71 @@ body {
   font-size: 1rem;
 }
 
+.footer .container{
+  padding-top: 2.3rem;
+}
+
 .footer__description {
   display: flex;
   flex-direction: column;
   width: 30%;
+  gap: 1.4rem;
 }
+
+.footer__app{
+display: flex;
+gap: 0.5rem;
+}
+
 .footer__title {
   font-size: 1.1rem;
   font-weight: bold;
+  margin-bottom: 1.8rem;
 }
 
 .footer__text {
   color: rgb(43 41 45 / 60%);
   text-decoration: none;
+}
+
+.footer_main .container{
+  display: flex;
+  justify-content: flex-start;
+  gap: 8.3rem;
+  margin-bottom: 3.4rem;
+}
+
+.footer__list{
+  display: flex;
+  gap: 4.8rem;
+}
+
+.footer__part{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8rem 0;
+  border-top: 1px solid rgb(43 41 45 / 40%);
+}
+
+.footer__link{
+  margin-top: 1.1rem;
+}
+
+/* .footer__part::before{
+  content: '';
+  height: 1px;
+  color: rgb(43 41 45 / 40%);
+} */
+
+
+
+.footer__rules{
+
+  display: flex;
+  gap: 1.1rem;
+}
+
+.footer__network{
+  display: flex;
+  gap: 1.1rem;
 }
