--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ ul {
   list-style: none;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 html {
   font-size: 18px;
 }
@@ -56,7 +61,7 @@ body {
 }
 .btn {
   color: #ffffff;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: bold;
   background-color: #3040c4;
   padding: 0.6rem 1.2rem;
@@ -81,8 +86,8 @@ body {
   gap: 2rem;
 }
 
-.nav__item{
-width: 80px;
+.nav__item {
+  width: 80px;
 }
 
 .nav__link {
@@ -96,28 +101,36 @@ width: 80px;
 
 .promo {
   background-color: #f9d9eb;
-  padding-top: 11rem;
-  padding-bottom: 3.4rem;
+  padding-top: 9rem;
+  padding-bottom: 5.5rem;
+  position: relative;
 }
 
 .promo .container {
   display: flex;
-  justify-content: center;
 }
 
 .promo__contant {
-  width: 70%;
+  z-index: 1;
+  position: relative;
 }
 
 .promo__title {
+  width: 70%;
   font-size: 4.5rem;
   font-weight: bold;
   margin-bottom: 1.8rem;
 }
 
 .promo__text {
+  width: 50%;
   font-size: 1.3rem;
   margin-bottom: 3.3rem;
+}
+
+.promo__img {
+  position: absolute;
+  right: 60px;
 }
 
 .possibilities {
@@ -158,11 +171,10 @@ width: 80px;
   text-align: center;
 }
 
-.possibilities__link{
+.possibilities__link {
   font-size: 1rem;
-  color: #3041C4;
+  color: #3041c4;
   font-weight: bold;
-
 }
 
 .categories {
@@ -179,9 +191,10 @@ width: 80px;
 
 .categories__list {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 1.4rem;
+  align-items: center;
+  width: 100%;
 }
 
 .categories__subtitle {
@@ -240,7 +253,7 @@ width: 80px;
 
 .about .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .about__subtitle {
@@ -261,6 +274,10 @@ width: 80px;
   margin-bottom: 2.7rem;
 }
 
+.about__img {
+  object-fit: contain;
+}
+
 .subscription {
   background-color: rgba(43, 41, 45, 0.062);
   padding-top: 5.8rem;
@@ -269,7 +286,7 @@ width: 80px;
 
 .subscription .container {
   display: flex;
-  gap: 10rem;
+  gap: 8rem;
   align-items: center;
   justify-content: center;
 }
@@ -301,7 +318,7 @@ width: 80px;
   font-size: 1rem;
 }
 
-.footer .container{
+.footer .container {
   padding-top: 2.3rem;
 }
 
@@ -312,9 +329,9 @@ width: 80px;
   gap: 1.4rem;
 }
 
-.footer__app{
-display: flex;
-gap: 0.5rem;
+.footer__app {
+  display: flex;
+  gap: 0.5rem;
 }
 
 .footer__title {
@@ -328,44 +345,44 @@ gap: 0.5rem;
   text-decoration: none;
 }
 
-.footer_main .container{
+.footer_main .container {
   display: flex;
   justify-content: flex-start;
   gap: 8.3rem;
   margin-bottom: 3.4rem;
 }
 
-.footer__list{
+.footer__list {
   display: flex;
   gap: 4.8rem;
 }
 
-.footer__part{
-  display: flex;
-  justify-content: space-between;
-  padding: 0.8rem 0;
-  border-top: 1px solid rgb(43 41 45 / 40%);
+.footer__part::before {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  opacity: 0.8;
+  background-color: rgb(43 41 45 / 20%);
 }
 
-.footer__link{
+.footer__part .container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+}
+
+.footer__link {
   margin-top: 1.1rem;
 }
 
-/* .footer__part::before{
-  content: '';
-  height: 1px;
-  color: rgb(43 41 45 / 40%);
-} */
-
-
-
-.footer__rules{
-
+.footer__rules {
   display: flex;
   gap: 1.1rem;
 }
 
-.footer__network{
+.footer__network {
   display: flex;
   gap: 1.1rem;
 }
