--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 .logo__text {
   color: rgb(43 41 45 / 60%);
 }
+
 .btn {
   color: #ffffff;
   font-size: 1rem;
@@ -73,6 +74,21 @@ body {
 .btn-white {
   color: #3040c4;
   background-color: #ffffff;
+}
+
+.nav__toggle {
+  display: none;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  z-index: 1;
+  right: 30px;
+  top: 1.2rem;
+  cursor: pointer;
+}
+
+#nav__toggle {
+  display: none;
 }
 
 .nav {
@@ -187,6 +203,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .categories__list {
@@ -304,12 +321,13 @@ body {
 
 .subscription__form form {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
 .subscription__field {
   width: 300px;
-  padding: 0px 15px;
+  padding: 10px 15px;
   border: 1px solid #2b292d3a;
 }
 
