--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
   display: flex;
 }
 
-.promo__contant {
+.promo__content {
   z-index: 1;
   position: relative;
 }
@@ -264,7 +264,7 @@ body {
   padding-bottom: 10.5rem;
 }
 
-.about__contant {
+.about__content {
   width: 40%;
 }
 
